# forbidden-library-native

./: .codacyrc  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  BROWSER_AUTOMATION_TEST_REPORT.md  BugOracle.md  CHANGELOG.md  CHANGELOG.md.template  COMPREHENSIVE_PROJECT_REVIEW.md  CONTINUATION_PROMPT.md  CONTRIBUTING.md  CONTRIBUTING.md.template  CR_ActPlan.md  Cargo.toml  CodyRep.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TEST_REPORT.md  DOCKER.md  DOCKER_BUILD_SUMMARY.md  Dockerfile  Dockerfile.dev  ENHANCED_ERROR_HANDLING.md  FULL_TEST_BATTERY_REPORT.md  Forbidden Library Blueprint v2.0 (Expanded).md  GEMINI.md  IMPROVEMENT_ACTION_PLAN.md  LICENSE  PHASE_3_IMPLEMENTATION_REPORT.md  PHASE_6_COMPLETION_REPORT.md  PRE_COMMIT_CLEANUP.md  PROGRESS_REPORT.md  PROJECT_STATUS_REPORT.md  PR_DESCRIPTION.md  PR_PHASES_4_5_6.md  Project Checklist_ Forbidden Library - Ground-Up Implementation.md  (+20 more)
.agentic-tools-mcp/tasks/: tasks.json
.claude/: settings.local.json
.github/: Project Initiation Checklists for AI Agents (Expanded).md  bug_report.md  coding-agent-prompt.md  copilot-instructions.md  github-copilot.yml
.github/chatmodes/: Albedo.chatmode.md
.github/workflows/: ci.yml  codacy-analysis.yml  release.yml  test.yml  windows-compatibility.yml
.specstory/: AI-Comms.md  HANDOFF_TO_PANDORA.md  Workflow-Update
.specstory/history/: 2025-08-19_22-45Z-refining-and-reorganizing-operational-instructions.md  2025-08-20_08-37Z-markdown-linting-and-formatting-adjustments.md  2025-08-20_09-13Z-syncing-project-checklist-with-linear-issues.md  2025-08-21_07-03Z-updating-project-checklist-and-documentation-status.md  2025-08-21_22-07Z-syncing-mcp-servers-with-claude-desktop.md  2025-08-21_23-04Z-tool-analysis-and-redundancy-identification.md  2025-08-25_07-24Z-tauri-config-troubleshooting-and-issue-delegation.md  2025-08-27_11-08Z-verifying-linear-mcp-server-connectivity-and-data.md  2025-08-27_12-39Z-synchronizing-phase-5-tasks-with-linear.md  2025-08-27_12-51Z-structured-approach-for-linear-issue-management.md  2025-08-27_23-59Z-setting-up-codacy-cli-with-docker-on-windows.md  2025-08-28_02-31Z-test-project-for-functionality.md  2025-08-28_02-31Z-test-project-functionality-discussion.md  2025-08-28_02-32Z-pieces-mcp-server-configuration-guidance.md  2025-09-03_07-06Z-tauri-app-launch-and-signing-key-issue.md  2025-09-03_07-40Z-create-a-repomix-file-excluding-files-unnecessary-to-the-code-base.md  2025-09-04_04-47Z-launching-the-forbidden-library-desktop-application.md  2025-09-04_05-19Z-removing-hi-ai-from-settings-json-file.md  2025-09-17_05-52Z-albedo-chatmode-file-update-instructions.md  2025-09-17_06-02Z-project-review-and-necessary-fixes-summary.md  2025-09-26_10-07Z-action-plan-for-forbidden-library-optimization.md
.zencoder/rules/: repo.md
docker/: nginx.conf
docs/: AI_PROVIDERS.md  API.md  ARCHITECTURE.md  BROWSER_AUTOMATION_MEMORY.md  CODACY_CLI_SETUP.md  DEPLOYMENT.md  EXAMPLES.md  Forbidden Library Blueprint v2.0 (Expanded).md  IMMEDIATE_SENTRY_IMPLEMENTATION.md  MCP_CODING_ACCURACY_INSTRUCTIONS.md  MCP_FILESYSTEM_EXAMPLES.md  MCP_FILESYSTEM_INSTALLATION_GUIDE.md  MCP_FILESYSTEM_QUICK_REFERENCE.md  MCP_FILESYSTEM_TROUBLESHOOTING.md  MCP_FILESYSTEM_WITH_MORPH_GUIDE.md  MCP_QUICK_ACCURACY_GUIDE.md  PERFORMANCE.md  PHASE_3_IMPLEMENTATION_REPORT.md  PHASE_6_COMPLETION_REPORT.md  POLICY_Key_Management.md  Project Checklist_ Forbidden Library - Ground-Up Implementation.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v2.0.0.md  REPO_MERGE_GUIDE.md  SENTRY_INTEGRATION_PLAN.md  TESTING_FRAMEWORK.md  THREAD_MIGRATION_PROMPT.md  TROUBLESHOOTING.md  UI_UX_GUIDE.md  Unified Agent Directives for Project_ Forbidden Library.md  WINDOWS_COMPATIBILITY.md  WINDOWS_TEST_FRAMEWORK.md  monitoring-refactoring.md
docs/linear/: PHASE_5_Completion_Issues.md  README.md
scripts/: browser-test.py  bump-version.mjs  codacy-cli.ps1  comprehensive-test.ps1  debug-page.py  deploy.ps1  docker-build.bat  docker-build.sh  merge-repo.ps1  quick-test.ps1  requirements.txt  run-browser-tests.ps1  run-tauri.ps1  run-tests.ps1  setup-windows.ps1  simple-debug.py  test-deployment.js  test-package.json  test-report-template.md  test-sentry-integration.sh
src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts  test-setup.ts
src-tauri/: Cargo.toml  ERROR_MESSAGE_GUIDE.md  TESTING_FRAMEWORK.md  tauri.conf.json  tauri.min.json
src-tauri/benches/: performance_benchmarks.rs
src-tauri/src/: ai_providers.rs  commands.rs  errors.rs  keychain.rs  lib.rs  main.rs  models.rs  validation.rs
src-tauri/src/database/: fts_search.rs  mod.rs  query_optimizer.rs
src-tauri/src/monitoring/: MIGRATION.md  README.md  SUMMARY.md  config.rs  error_handling.rs  mod.rs  tests.rs  transactions.rs
src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/services/: mod.rs
src-tauri/tests/: integration_tests.rs  platform_tests.rs  security_audit.rs  simple_integration.rs
src/lib/: sentry.ts
src/lib/components/: ChatInterface.svelte  ChatInterface.svelte.bak  ConversationList.svelte  DesktopFeatures.svelte  EnhancedErrorNotification.svelte  ErrorNotification.svelte  LoadingStates.svelte  MessageBubble.svelte  MessageBubble.test.ts  MessageRenderer.svelte  ProjectPlanning.svelte  ProviderSelector.svelte  SearchHighlight.svelte  SearchPanel.svelte  SkeletonLoaders.svelte
src/lib/services/: api.ts  enhanced-api.ts
src/lib/stores/: enhanced-error-store.test.ts  enhanced-error-store.ts  environment.ts  error-store.test.ts  error-store.ts  settings.test.ts  settings.ts
src/lib/styles/: transitions.css
src/lib/types/: desktop.ts  errors.test.ts  errors.ts  models.ts  tauri.d.ts
src/lib/utils/: accessibility.ts  animations.ts  performance.ts  (+4 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  enhanced-page.svelte
src/test/: setup.ts
(+4 files in other folders)
