[package]
name = "forbidden-library-native"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version = "1.70"
description = "Privacy-first desktop application for interacting with powerful language models - Rust backend"

[lib]
name = "forbidden_library_native"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri framework
tauri = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
rusqlite = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error tracking and monitoring
sentry = "0.35"
sentry-tauri = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
ring = { workspace = true }



[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# Mocking and test utilities
mockall = "0.12"
tempfile = "3.8"
test-log = "0.2"

# Performance testing
criterion = "0.5"

# Security testing
proptest = "1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bench]]
name = "performance_benchmarks"
harness = false

